# rrc-pipeline

./: .gitignore  .pre-commit-config.yaml  Justfile  LICENSE  README.md  biome.jsonc  docker-compose.yml  nginx.conf
.github/workflows/: docker-build.yml  pre-commit.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/blank/api/: interfaces.py  main.py
backend/blank/db/: models.py  session.py
backend/blank/db/migrations/: env.py
backend/rrc/: cli.py
backend/rrc/api/: interfaces.py  main.py
backend/rrc/db/: models.py  session.py
backend/rrc/inference/: detect_pending.py  prompt.py  service.py
backend/rrc/ingest/: ingest_directory.py
backend/rrc/ocr/: service.py  transcribe_pending.py
backend/rrc/reporting/: export_predictions.py  summarize_db.py
backend/rrc/utils/: click.py  io.py  logger.py  ml.py  types.py
frontend/: Dockerfile  index.html  openapi-ts.config.ts  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.css  App.tsx  main.tsx  styles.css
frontend/src/client/: schemas.gen.ts  services.gen.ts  types.gen.ts
frontend/src/client/@tanstack/: react-query.gen.ts
frontend/src/components/: ProxyPatternRow.tsx  ProxyPatternsCard.tsx
frontend/src/contexts/: ProxyPatternsContext.tsx
scripts/: add_ts_nocheck.py  deploy_docker.fish
